<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.novatech.pixabayphotoviewer.presentation.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/gradient_background"
        android:padding="24dp">

        <!-- Logo and Title Container -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="32dp">

            <!-- Logo/Icon -->
            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_logo"
                android:contentDescription="App Logo"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp" />

            <!-- App Title -->
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pixabay\nPhoto Viewer"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <!-- Email Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="Login"
            android:elevation="4dp"
            android:onClick="@{() -> viewModel.login()}"
            android:layout_marginBottom="16dp" />

        <!-- Register Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/registerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don’t have an account? "
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />
            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register now"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

        </LinearLayout>

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />
    </LinearLayout>
</layout>
